# cargo-program

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  node-metadata.scale
.github/workflows/: ci.yml  deploy.yml
src/: common.rs  crate_info.rs  error.rs  lib.rs  main.rs  output_info.rs
src/commands/: build.rs  login.rs  mod.rs  new.rs  publish.rs  run.rs  test.rs
src/commands/templates/: _Cargo.toml  _async_lib.rs  _lib.rs  _run.rhai
src/runner/: extrinsics.rs  mod.rs  node.rs  off_chain.rs  on_chain.rs
src/templates/new/: Cargo.toml  lib.rs
test-program/: Cargo.toml
