[package]
name = "cargo-program"
version = "0.0.1"
edition = "2018"
license = "GPL-3.0"
description = "Utility to simplify Gear programs development"
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]
repository = "https://github.com/gear-tech/cargo-program"
readme = "README.md"

[lib]
name = "cargo_program"
path = "src/lib.rs"
doc = true

[[bin]]
name = "cargo-program"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0.43"
clap = "3.0.0-beta"
colored = "2.0.0"
log = "0.4.14"
thiserror = "1.0.28"
