[package]
name = "cargo-program"
version = "0.0.4"
edition = "2018"
license = "GPL-3.0"
description = "Utility to simplify Gear programs development"
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]
repository = "https://github.com/gear-tech/cargo-program"
readme = "README.md"

[lib]
name = "cargo_program"
path = "src/lib.rs"
doc = true

[[bin]]
name = "cargo-program"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0.51"
cargo_metadata = "0.14.1"
clap = "3.0.0-beta"
colored = "2.0.0"
env_logger = "0.9.0"
log = "0.4.14"
pwasm-utils = "0.18.2"
reqwest =  { version = "0.11.7", default-features = false, features = ["blocking", "json"] }
serde = "1.0.130"
serde_json = "1.0.72"
thiserror = "1.0.30"
