[package]
name = "cargo-program"
version = "0.0.5-beta"
edition = "2018"
license = "GPL-3.0"
description = "Utility to simplify Gear programs development"
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]
repository = "https://github.com/gear-tech/cargo-program"
readme = "README.md"

[lib]
name = "cargo_program"
path = "src/lib.rs"
doc = true

[[bin]]
name = "cargo-program"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = "1.0.52"
cargo_metadata = "0.14.1"
clap = { version = "3.1.14", features = ["cargo", "derive"] }
colored = "2.0.0"
env_logger = "0.9.0"
log = "0.4.14"
parity-scale-codec = "2.3.1"
pwasm-utils = "0.18.2"
rhai = "1.3.0"
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
subxt = { git = "https://github.com/paritytech/subxt" }
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["rt-multi-thread"] }
