[package]
name = "test-program"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] }
gstd-async = { git = "https://github.com/gear-tech/gear.git" }

[build]
target = "wasm32-unknown-unknown"

[target.wasm32-unknown-unknown]
rustflags = [
  "-C", "link-args=--import-memory",
]

[profile.release]
lto = true
opt-level = 's'
